--- a/index.html
+++ b/index.html
@@ -1,2 +1,20 @@
-<h1> My homepage </h1>
-<body> My link-in-bio </body>
+<!DOCTYPE html> 
+<html> 
+  <head> 
+    <meta charset="UTF-8">
+    <style> 
+    * { border: 1px red dashed;} 
+    </style>
+  </head>
+  <body>
+  <div class="main-container" This is the main container>
+    <div class="image-row" This is the image row></div>
+    <div class="name-row" This is the Name row></div>
+    <div class="social-icons-row" This is the Name row></div>
+    <div class="links-row" This is the Name row></div>
+  </div>
+
+
+
+  </body>
+  </html>
