--- a/index.html
+++ b/index.html
@@ -66,16 +66,21 @@
         width: 60px;
         height: 60px;
         object-fit: cover;
-    
+        padding: 5px;
+        align-items: center;
       }
 
     .item {
       margin-bottom: 30px;
       display: flex;
-      background-color: #FFFFFF;
+      background-color: #FFFFFF; 
+      background-color: rgba(255, 255, 255, 0.5);
       border-radius: 1000px;
       display: flex;
       align-items: center;
+      border-style: solid;
+      border-color: #FF2751;
+      border-width: 2px;
     }
     
 
